--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,700;1,500&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- MetaTags importantes para as ferramentas de busca. -->
+    <meta property="og:type" content="website"/>
+    <meta property="og:title" content="Dev Burger - O melhor hamburger dev!"/>
+    <meta property="og:image" content="https://cardapio-henna.vercel.app/assets/hamb-1.png"/>
+    <meta property="og:description" content="O melhor hamburger caseiro que você já comeu!"/>
+    <meta property="og:site_name" content="DevBurger"/>
+
     <link rel="stylesheet" href="./styles/output.css"/>
     <title>Hamburgueria Dev</title>
 </head>
